Fixed issue with navbar container spacing on different device sizes

--- a/www/styles/style.css
+++ b/www/styles/style.css
@@ -37,7 +37,6 @@ body {
     padding-left: 0;
     padding-right: 0;
 }
-.container-fluid .navbar-right { padding-right: 15px; }
 .content-box {
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
@@ -94,6 +93,10 @@ body {
 
 /*** NAVBAR ***/
 .navbar, .navbar-header { height: 45px; }
+.navbar .container-fluid {
+    padding-left: inherit;
+    padding-right: 15px;
+}
 .navbar-icon {
     color: #ffffff;
     font-size: 22px;
@@ -123,6 +126,10 @@ body {
     .navbar .container {
         padding-right: 0;
         width: 100%;
+    }
+    .navbar .container-fluid {
+        padding-left: 15px;
+        padding-right: inherit;
     }
     .navbar-header { float: left; }
     .navbar-nav { margin: 0; }
